# swissknife

./: .gitignore  LICENSE.md  README.rst  pyproject.toml  setup.py
swissknife/: error.py  utils.py
swissknife/scripts/: aggregate.py  groupby.py  qplot.py  remap.py
