[tool.poetry]
name = "swissknife"
version = "1.0.0"
description = "A collection of handy utilities for data crunching"
authors = ["Tamas Nepusz <ntamas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
matplotlib = { version = "^3.3.1", optional = true }

[tool.poetry.extras]
plotting = ["matplotlib"]

[tool.poetry.scripts]
aggregate = "swissknife.scripts.aggregate:main"
groupby = "swissknife.scripts.groupy:main"
qplot = "swissknife.scripts.qplot:main"
remap = "swissknife.scripts.remap:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
